Fix buttons scaling incorrectly when maximising/downing the window

--- a/ZazBoy/EmulatorControl.axaml
+++ b/ZazBoy/EmulatorControl.axaml
@@ -8,10 +8,10 @@
              Margin="0"
              Focusable="True">
   <DockPanel>
-    <StackPanel Name="ButtonStack" DockPanel.Dock="Bottom" MinWidth="160" MinHeight="5" MaxHeight="50" Margin="10" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Stretch" Spacing="15">
-      <Image Name="PowerButton" MinWidth="5" MinHeight="1"></Image>
-      <Image Name="ResumeButton" MinWidth="5" MinHeight="1"></Image>
-      <Image Name="DebugButton" MinWidth="5" MinHeight="1"></Image>
+    <StackPanel Name="ButtonStack" DockPanel.Dock="Bottom" Margin="10" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Stretch" Spacing="15">
+      <Image Name="PowerButton"></Image>
+      <Image Name="ResumeButton"></Image>
+      <Image Name="DebugButton"></Image>
     </StackPanel>
     <Image Name="LCD" DockPanel.Dock="Top" MinWidth="160" MinHeight="144"></Image>
   </DockPanel>
