--- a/ZazBoy/EmulatorControl.axaml
+++ b/ZazBoy/EmulatorControl.axaml
@@ -2,17 +2,29 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:local="clr-namespace:ZazBoy;assembly=ZazBoy"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="800"
              Background="#141414"
              x:Class="ZazBoy.EmulatorControl"
              Margin="0"
              Focusable="True">
-  <DockPanel>
-    <StackPanel Name="ButtonStack" DockPanel.Dock="Bottom" Margin="10" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Stretch" Spacing="15">
-      <Image Name="PowerButton"></Image>
-      <Image Name="ResumeButton"></Image>
-      <Image Name="DebugButton"></Image>
-    </StackPanel>
-    <Image Name="LCD" DockPanel.Dock="Top" MinWidth="160" MinHeight="144"></Image>
+  
+  <UserControl.Resources>
+    <local:RelativeHeightScaleConverter x:Key="heightConverter"/>
+  </UserControl.Resources>
+  
+  <DockPanel Name="EmulatorRoot">
+    <Image Name="LCD" DockPanel.Dock="Top" MinWidth="160" MinHeight="144" MaxHeight="{Binding Bounds.Height, ElementName=EmulatorRoot, Converter={StaticResource heightConverter}, ConverterParameter=0.95}"></Image>
+    <Grid Name="ButtonGrid" DockPanel.Dock="Bottom" HorizontalAlignment="Center" Width="{Binding Bounds.Width, ElementName=LCD}" Height="{Binding Bounds.Height, ElementName=EmulatorRoot, Converter={StaticResource heightConverter}, ConverterParameter=0.05}">
+      <Canvas Name="PowerCanvas" Margin="10,5,10,5" HorizontalAlignment="Left" Height="{Binding Height, ElementName=ButtonGrid, Converter={StaticResource heightConverter}, ConverterParameter=0.80}" Width="{Binding Bounds.Width, ElementName=PowerButton}">
+        <Image Name="PowerButton" Height="{Binding Bounds.Height, ElementName=PowerCanvas}"></Image>
+      </Canvas>
+      <Canvas Name="PauseCanvas" Margin="10,5,10,5" HorizontalAlignment="Center" Height="{Binding Height, ElementName=ButtonGrid, Converter={StaticResource heightConverter}, ConverterParameter=0.80}" Width="{Binding Bounds.Width, ElementName=PauseButton}">
+        <Image Name="PauseButton" Height="{Binding Bounds.Height, ElementName=PauseCanvas}"></Image>
+      </Canvas>
+      <Canvas Name="DebugCanvas" Margin="10,5,10,5" HorizontalAlignment="Right" Height="{Binding Height, ElementName=ButtonGrid, Converter={StaticResource heightConverter}, ConverterParameter=0.80}" Width="{Binding Bounds.Width, ElementName=DebugButton}">
+        <Image Name="DebugButton" Height="{Binding Bounds.Height, ElementName=DebugCanvas}"></Image>
+      </Canvas>
+    </Grid>
   </DockPanel>
 </UserControl>
