--- a/ZazBoy/UI/MainWindow.axaml
+++ b/ZazBoy/UI/MainWindow.axaml
@@ -2,9 +2,9 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:views="clr-namespace:ZazBoy"
+        xmlns:views="clr-namespace:ZazBoy.UI.Controls"
         mc:Ignorable="d" d:DesignWidth="160" d:DesignHeight="150"
-        x:Class="ZazBoy.MainWindow"
+        x:Class="ZazBoy.UI.MainWindow"
         Title="ZazBoy"
         Width="800"
         Height="720"
