--- a/ZazBoy/UI/Controls/EmulatorControl.axaml
+++ b/ZazBoy/UI/Controls/EmulatorControl.axaml
@@ -14,10 +14,10 @@
     <converters:RelativeHeightScaleConverter x:Key="heightConverter"/>
   </UserControl.Resources>
 
-  <Grid Name="EmulatorRoot" HorizontalAlignment="Stretch" ColumnDefinitions="*" RowDefinitions="*" Height="{Binding Bounds.Height, ElementName=EmulatorControl}" Width="{Binding Bounds.Width, ElementName=EmulatorControl}">
+  <Grid Name="EmulatorRoot" ColumnDefinitions="2*" RowDefinitions="2*" Height="{Binding Bounds.Height, ElementName=EmulatorControl}" Width="{Binding Bounds.Width, ElementName=EmulatorControl}">
     <DockPanel Grid.Column="0" Grid.Row="0" Name="EmulatorView">
       <Image Name="LCD" DockPanel.Dock="Top" MinWidth="160" MinHeight="144" MaxHeight="{Binding Bounds.Height, ElementName=EmulatorView, Converter={StaticResource heightConverter}, ConverterParameter=0.95}"></Image>
-      <Grid Name="ButtonGrid" DockPanel.Dock="Bottom" HorizontalAlignment="Center" Width="{Binding Bounds.Width, ElementName=LCD}" Height="{Binding Bounds.Height, ElementName=EmulatorView, Converter={StaticResource heightConverter}, ConverterParameter=0.05}">
+      <Grid Name="ButtonGrid" DockPanel.Dock="Bottom" VerticalAlignment="Top" HorizontalAlignment="Center" Width="{Binding Bounds.Width, ElementName=LCD}" Height="{Binding Bounds.Height, ElementName=EmulatorView, Converter={StaticResource heightConverter}, ConverterParameter=0.05}">
         <Canvas Name="PowerCanvas" Margin="10,5,10,5" HorizontalAlignment="Left" Height="{Binding Height, ElementName=ButtonGrid, Converter={StaticResource heightConverter}, ConverterParameter=0.80}" Width="{Binding Bounds.Width, ElementName=PowerButton}">
           <Image Name="PowerButton" Height="{Binding Bounds.Height, ElementName=PowerCanvas}"></Image>
           <Image Name="PowerText" Height="{Binding Bounds.Height, ElementName=PowerCanvas}" IsHitTestVisible="False"></Image>
