--- a/ZazBoy/UI/Controls/DebugControl.axaml
+++ b/ZazBoy/UI/Controls/DebugControl.axaml
@@ -14,7 +14,7 @@
 
 
   <DockPanel Name="DebugRoot" Height="{Binding Bounds.Height, ElementName=DebugControl, Converter={StaticResource scaleConverter}, ConverterParameter=0.8}}">
-    <Grid Name="OperationsList" DockPanel.Dock="Right" HorizontalAlignment="Left" RowDefinitions="*,*,*,*,*,*,*,*,*,*" Height="{Binding Bounds.Height, ElementName=DebugRoot}" Width="{Binding Bounds.Width, ElementName=DebugRoot, Converter={StaticResource scaleConverter}, ConverterParameter=0.6}}">
+    <Grid Name="OperationsList" DockPanel.Dock="Right" HorizontalAlignment="Left" RowDefinitions="*,*,*,*,*,*,*,*,*,*" Height="{Binding Bounds.Height, ElementName=DebugRoot}" Width="{Binding Bounds.Width, ElementName=DebugRoot, Converter={StaticResource scaleConverter}, ConverterParameter=0.6}}" Background="#252525">
       <Border BorderBrush="Red" BorderThickness="4,0,4,0">
         <controls:OperationBlock Name="OperationBlock0" Grid.Row="0" Height="{Binding Bounds.Height, ElementName=DebugRoot, Converter={StaticResource scaleConverter}, ConverterParameter=0.1}"/>
       </Border>
