--- a/ZazBoy/UI/Controls/MemoryInspectorControls/MemoryBlockItem.axaml
+++ b/ZazBoy/UI/Controls/MemoryInspectorControls/MemoryBlockItem.axaml
@@ -5,7 +5,7 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="50"
              x:Class="ZazBoy.UI.Controls.MemoryInspectorControls.MemoryBlockItem">
   
-  <Border Margin="50,0,50,0" BorderBrush="White" BorderThickness="1" CornerRadius="5,5,5,5">
+  <Border BorderBrush="White" BorderThickness="1" CornerRadius="5,5,5,5">
     <Grid ColumnDefinitions="*,3*">
       <TextBlock Name="AddressBlock" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center">#1234</TextBlock>
       <TextBox Name="DataBox" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center"></TextBox>
